[FIX] autotoc text color was invisible with the feb12 theme

--- a/themes/feb12/css/feb12.css
+++ b/themes/feb12/css/feb12.css
@@ -7054,6 +7054,9 @@ body.fullscreen {
     line-height: 1.5;
     color: #212529; }
 
+.autotoc .dropdown-item {
+  color: #2623a9; }
+
 table.tablesorter thead tr.tablesorter-headerRow th.tablesorter-headerUnSorted:not(.sorter-false) {
   background-image: url(data:image/gif;base64,R0lGODlhFQAJAIAAAP///////yH5BAEAAAEALAAAAAAVAAkAAAIXjI+AywnaYnhUMoqt3gZXPmVg94yJVQAAOw==); }
   table.tablesorter thead tr.tablesorter-headerRow th.tablesorter-headerAsc {
